Unit testing (WIP): - Add repository tests - Add constants - Add gradle task to avoid Retrofit reflection warning (not successful so far)